--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://${POSTGRESQL_SERVICE_HOST}:${POSTGRESQL_SERVICE_PORT}/${POSTGRESQL_DATABASE}
+spring.datasource.username=${POSTGRESQL_USER}
+spring.datasource.password=${POSTGRESQL_PASSWORD}
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
